--- a/home.css
+++ b/home.css
@@ -1009,45 +1009,45 @@ main {
 }
 
 @keyframes eye-scan {
-  0%, 30%, 100% {
+  0%, 12%, 100% {
     transform: translate(-50%, -20%);
   }
-  45% {
+  25% {
     transform: translate(-90%, -20%);
   }
-  65% {
+  45% {
     transform: translate(-10%, -20%);
   }
-  75% {
+  60%, 90% {
     transform: translate(-50%, -20%);
   }
 }
 
 @keyframes eye-squeeze {
-  0%, 80%, 100% {
+  0%, 88%, 100% {
     transform: scaleY(1);
     opacity: 1;
   }
-  84% {
+  90% {
     transform: scaleY(0.05);
     opacity: 0;
   }
-  88% {
+  94% {
     transform: scaleY(1);
     opacity: 1;
   }
 }
 
 @keyframes eye-line {
-  0%, 80%, 100% {
+  0%, 88%, 100% {
     opacity: 0;
     transform: translate(-50%, -50%) scaleX(0.7);
   }
-  84% {
+  90% {
     opacity: 1;
     transform: translate(-50%, -50%) scaleX(1);
   }
-  88% {
+  94% {
     opacity: 0;
     transform: translate(-50%, -50%) scaleX(0.7);
   }
